--- a/Css/barra_navegacion.css
+++ b/Css/barra_navegacion.css
@@ -3,13 +3,13 @@ nav {
     padding: 10px; /* Espaciado interno */
     text-align: center; /* Centrar el texto */
     margin-top: 400px; /* Desplazar la barra hacia abajo */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.356);
+    box-shadow: 0 30px 60px rgb(0, 0, 0, 0.458);
 }
 
 nav a {
     color: rgb(255, 255, 255); /* Color del texto */
     text-decoration: none; /* Sin subrayado */
-    margin: 0 70px; /* Espaciado entre enlaces */
+    margin: 0 40px; /* Espaciado entre enlaces */
     font-size: 30px; /* Tamaño de fuente */
 }
 
