--- a/Css/barra_navegacion.css
+++ b/Css/barra_navegacion.css
@@ -1,26 +1,34 @@
 nav {
-    background-color: #1A1A1D; /* Color de fondo de la barra */
-    padding: 10px; /* Espaciado interno */
-    text-align: center; /* Centrar el texto */
-    margin-top: 0px; /* Desplazar la barra hacia abajo */
+    background-color: #1A1A1D; 
+    padding: 10px; 
+    text-align: center; 
+    margin-top: 0px;
     border-radius: 15px;
     box-shadow: 0 40px 100px rgba(255, 251, 0, 0.118);
     border-bottom: 3px solid #D4AF37;
+    
 }
 
 nav a {
-    color: rgb(255, 255, 255); /* Color del texto */
-    text-decoration: none; /* Sin subrayado */
-    margin: 0 30px; /* Espaciado entre enlaces */
-    font-size: 30px; /* Tamaño de fuente */
-    display: inline-block; /* Permite aplicar padding */
-    padding: 10px; /* Espacio adicional para el área clickeable */
+    color: rgb(255, 255, 255); 
+    text-decoration: none;
+    margin: 0 30px; 
+    font-size: 30px; 
+    display: inline-block; 
+    padding: 10px; 
+    vertical-align: middle;
+    
 }
 
-/* Estilos para el hover en los enlaces */
+nav a img {
+    width: 32px; 
+    height: 32px;
+    margin-right: 15px;
+}
+
 nav a:hover {
     transform: scale(1.1);
-    color: #545454; /* Cambia el color al pasar el cursor */
+    color: #545454; 
     transition: transform 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
 }
 
@@ -28,12 +36,13 @@ nav a:hover {
     display: inline-flex;
     align-items: center;
     position: relative;
+    margin-top: 10px;
 }
 
 .search-border {
     display: flex;
     align-items: center;
-    padding: 1px; /* Espaciado interno */
+    padding: 1px; 
 }
 
 .search-icon {
@@ -47,17 +56,17 @@ nav a:hover {
     padding: 0;
     opacity: 0;
     visibility: hidden;
-    border: none; /* Sin borde en el input */
+    border: none; 
     outline: none;
     font-size: 25px;
-    background-color: transparent; /* Fondo transparente para el input */
+    background-color: transparent; 
     transition: width 0.4s ease, opacity 0.4s ease, visibility 0.4s;
 }
 
-/* Animación para desplegar la barra de búsqueda al hacer hover en el icono */
 .search-container:hover .search-input {
-    width: 200px; /* Ancho desplegado */
+    width: 100px; 
     padding: 5px;
     opacity: 1;
     visibility: visible;
 }
+
