--- a/Html/Areas/Quimica/qmc.css
+++ b/Html/Areas/Quimica/qmc.css
@@ -1,12 +1,11 @@
-/* Barra de navegación */
 .navbar {
-    background-color: #2c3e50;
-    padding: 15px 30px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    background-color: #1C1C1E;
+    padding: 10px 20px;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
     position: sticky;
     top: 0;
     z-index: 1000;
-    border-bottom: 4px solid #D4AF37;
+    border-bottom: 3px solid #D4AF37;
 }
 
 .nav-links {
@@ -39,15 +38,12 @@ nav a img {
     font-size: 18px;
     display: flex;
     align-items: center;
-    padding: 5px 15px;
-    border-radius: 5px;
-    transition: transform 0.2s ease, color 0.2s ease, box-shadow 0.2s ease, background-color 0.3s ease;
+    transition: transform 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
 }
 
 .nav-links a:hover {
-    transform: scale(1.05);
-    color: #D4AF37;
-    background-color: rgba(255, 255, 255, 0.1);
+    transform: scale(1.1);
+    color: #545454;
 }
 
 /* Menú desplegable */
@@ -59,21 +55,20 @@ nav a img {
 .dropbtn {
     color: white;
     font-size: 18px;
-    padding: 10px 15px;
-    background-color: #2c3e50;
+    background-color: #1C1C1E;
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #34495e;
+    background-color: #1C1C1E;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #34495e;
+    background-color: #1C1C1E;
     min-width: 220px;
     border-radius: 8px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
