--- a/Html/Areas/Arte/art.css
+++ b/Html/Areas/Arte/art.css
@@ -1,12 +1,3 @@
-body {
-    background-color: #1C1C1E;
-    background-image: url('https://wallpapers.com/images/hd/fondonegro-abstracto-en-4k-4kjbhsuu5ezb6u30.jpg'); /* Reemplaza con la URL de tu imagen de fondo */
-    background-size: cover; /* La imagen cubrirá toda el área del fondo */
-    background-position: center; /* Centra la imagen */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    font-family: 'Montserrat', sans-serif; /* Usar la fuente de Google Fonts que ya tienes */
-}
-
 .navbar {
     background-color: #1C1C1E;
     padding: 10px 20px;
@@ -34,12 +25,16 @@ nav a img {
 
 .right-links {
     display: flex;
-    gap: 90px;
-    margin-left: auto;
+    gap: 20px;
 }
 
 .nav-links li {
     margin-left: 20px;
+}
+
+.right-links a:hover {
+    transform: scale(1.1);
+    color: #545454;
 }
 
 .nav-links a {
@@ -51,20 +46,16 @@ nav a img {
     transition: transform 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
 }
 
-.nav-links a:hover {
-    transform: scale(1.1);
-    color: #545454;
-}
 
-/* Estilos para el menú desplegable */
 .dropdown {
     position: relative;
     display: inline-block;
+    transition: transform 0.3s ease-in-out; 
 }
 
 .dropbtn {
     color: white;
-    font-size: 18px;
+    font-size: 18px; 
 }
 
 .dropdown-content {
@@ -75,25 +66,32 @@ nav a img {
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     z-index: 1;
+    animation: fadeInDropdown 0.5s ease-out;
 }
 
 .dropdown-content a {
     color: white;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
+    display: flex;  
+    align-items: center;  
+    gap: 10px;  
     transition: background-color 0.2s;
 }
 
+.dropdown:hover {
+    transform: scale(1.1);
+}
+
 .dropdown-content a:hover {
-    background-color: #ffffff1b;
+    background-color: #D4AF37;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-/* Animación de texto */
+
 @keyframes fadeInText {
     0% {
         opacity: 0;
@@ -103,7 +101,6 @@ nav a img {
     }
 }
 
-/* Estilo de descripción y temas */
 #descripcion, #temas {
     margin: 20px;
     padding: 20px;
@@ -113,7 +110,7 @@ nav a img {
 }
 
 #descripcion p {
-    color: white; /* Cambia el color del texto de la descripción a blanco */
+    color: white;
 }
 
 h1 {
@@ -128,7 +125,6 @@ h2 {
     color: #D4AF37;
 }
 
-/* Estilos de los temas */
 #temas ul {
     list-style: none;
     padding: 0;
@@ -154,7 +150,6 @@ h2 {
     }
 }
 
-/* Subtemas ocultos inicialmente */
 #temas ul ul {
     display: none;
     padding-left: 20px;
@@ -168,7 +163,6 @@ h2 {
     border-radius: 6px;
 }
 
-/* Mostrar subtemas al pasar el ratón */
 #temas > ul > li:hover > ul {
     display: block;
     transform: translateY(0);
