--- a/Html/Areas/Informatica/inf.css
+++ b/Html/Areas/Informatica/inf.css
@@ -46,7 +46,6 @@ nav a img {
     color: #545454;
 }
 
-/* Estilos para el menú desplegable */
 .dropdown {
     position: relative;
     display: inline-block;
@@ -76,7 +75,7 @@ nav a img {
 }
 
 .dropdown-content a:hover {
-    background-color: #ffffff1b;
+    background-color: #D4AF37;
 }
 
 .dropdown:hover .dropdown-content {
