--- a/Html/Areas/Lectura/lct.css
+++ b/Html/Areas/Lectura/lct.css
@@ -1,23 +1,5 @@
-
-body {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 800;
-    font-style: normal;
-    margin: 0;
-    background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20231019/pngtree-vertically-patterned-black-with-textured-finish-image_13664909.png');
-    background-size: cover;
-    background-position: center;
-}
-
-.nav-icon {
-    width: 32px; 
-    height: 32px; 
-    margin-right: 10px; 
-}
-
 .navbar {
-    background-color: rgba(28, 28, 30, 0.8);
+    background-color: rgb(28, 28, 30);
     padding: 10px 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     position: sticky;
@@ -93,7 +75,7 @@ nav a img {
 }
 
 .dropdown-content a:hover {
-    background-color: #ffffff1b;
+    background-color: #D4AF37;
 }
 
 .dropdown:hover .dropdown-content {
