--- a/Html/Areas/Matematicas/mtc.css
+++ b/Html/Areas/Matematicas/mtc.css
@@ -1,4 +1,3 @@
-/* Estilos para la barra de navegación */
 .navbar {
     background-color: #1C1C1E;
     padding: 10px 20px;
@@ -9,7 +8,6 @@
     border-bottom: 3px solid #D4AF37;
 }
 
-/* Estilo de los enlaces de la barra de navegación */
 .nav-links {
     list-style: none;
     display: flex;
@@ -25,10 +23,10 @@ nav a img {
     margin-right: 15px;
 }
 
-/* Estilo para los enlaces en la parte derecha de la barra de navegación */
 .right-links {
     display: flex;
     gap: 20px;
+    margin-left: auto; 
 }
 
 .nav-links li {
@@ -49,7 +47,6 @@ nav a img {
     color: #545454;
 }
 
-/* Estilos para el menú desplegable */
 .dropdown {
     position: relative;
     display: inline-block;
@@ -79,27 +76,13 @@ nav a img {
 }
 
 .dropdown-content a:hover {
-    background-color: #ffffff1b;
+    background-color: #D4AF37;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-/* Estilos para el fondo y texto */
-body {
-    background-color: #1C1C1E;
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 800;
-    font-style: normal;
-    background-image: url('https://wallpapers.com/images/hd/fondonegro-en-4k-hipnotizante-huozj0memde22a21.jpg'); /* Ruta de la imagen de fondo */
-    background-size: cover; /* La imagen cubre toda la pantalla */
-    background-position: center; /* Centrar la imagen */
-    background-repeat: no-repeat; /* No repetir la imagen */
-}
-
-/* Estilo para el título */
 h1 {
     font-size: 36px;
     color: #D4AF37;
