--- a/Html/Areas/Politica/pltc.css
+++ b/Html/Areas/Politica/pltc.css
@@ -79,7 +79,7 @@ nav a img {
 }
 
 .dropdown-content a:hover {
-    background-color: #ffffff1b;
+    background-color: #D4AF37;
 }
 
 .dropdown:hover .dropdown-content {
