--- a/Html/Areas/Religion/rlg.css
+++ b/Html/Areas/Religion/rlg.css
@@ -76,7 +76,7 @@ nav a img {
 }
 
 .dropdown-content a:hover {
-    background-color: #ffffff1b;
+    background-color: #D4AF37;
 }
 
 .dropdown:hover .dropdown-content {
