--- a/Css/areas.css
+++ b/Css/areas.css
@@ -135,3 +135,21 @@ main {
         margin-top: 110px;
     }   
 }
+
+.Tienda .imagen::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -150px; 
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.734);
+    transform: skewX(45deg) translateX(-150px); 
+    transition: transform 0.6s ease; 
+    z-index: 0; 
+    border-radius: 20px;
+}
+
+.Tienda .imagen:hover::before {
+    transform: skewX(40deg) translateX(0);
+}
